[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "numpy >= 1.17.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "rms-fpzip"
dynamic = ["version", "authors", "maintainers"]
description = "Numpy wrapper for fpzip algorithm (P. Lindstrom & M. Isenburg, 2006) RMS Fork"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.17.0",
]
license = {text = "BSD"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Archiving :: Compression",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
homepage = "https://github.com/SETI/pds-fpzip"
Repository = "https://github.com/SETI/pds-fpzip"
Source = "https://github.com/SETI/pds-fpzip"
Issues = "https://github.com/SETI/pds-fpzip/issues"

[tool.setuptools_scm]
local_scheme = "no-local-version"
