[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "wheel",
  "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "rms-fpzip"
dynamic = ["version", "authors", "maintainers"]
description = "Numpy wrapper for fpzip algorithm (P. Lindstrom & M. Isenburg, 2006) RMS Fork"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
]
license = {text = "BSD"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Archiving :: Compression",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
homepage = "https://github.com/SETI/rms-fpzip"
Repository = "https://github.com/SETI/rms-fpzip"
Source = "https://github.com/SETI/rms-fpzip"
Issues = "https://github.com/SETI/rms-fpzip/issues"

[tool.setuptools_scm]
local_scheme = "no-local-version"
