[metadata]
name = fpzip
url = https://github.com/seung-lab/fpzip/
summary = Numpy wrapper for fpzip algorithm (P. Lindstrom & M. Isenburg, 2006)
description-content-type = text/markdown
description-file = README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/fpzip/
license = None
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering  
    Topic :: System :: Archiving :: Compression  

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = fpzip
