[metadata]
name = rms-fpzip
url = https://github.com/SETI/pds-fpzip/
summary = Numpy wrapper for fpzip algorithm (P. Lindstrom & M. Isenburg, 2006) RMS Fork
description_content_type = text/markdown
description_file = README.md
long_description_content_type = text/markdown
long_description = file: README.md
author = William Silversmith
author_email = ws9@princeton.edu
maintainer = Robert French
maintainer_email = rfrench@seti.org
home_page = https://github.com/SETI/pds-fpzip/
license = None
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: System :: Archiving :: Compression

[global]
setup_hooks = pbr.hooks.setup_hook

[files]
packages = fpzip
