[metadata]
name = fpzip
url = https://github.com/seung-lab/fpzip/
summary = Numpy wrapper for fpzip algorithm (P. Lindstrom & M. Isenburg, 2006)
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/fpzip/
license = None
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering  
    Topic :: System :: Archiving :: Compression  

[global]
setup_hooks = pbr.hooks.setup_hook

[files]
packages = fpzip
